--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
-            <h4>Full stack Developer!</h4>
-            <p>I have complete my Bachelor Of Commerce(Computer Application) from Osmania University</p>
-            <p>I have learned Technologies like: HTML, CSS, Bootstrap, JavaScript, Node.js, React.js, SQLite</p>
+            <!-- <h4>Full stack Developer!</h4> -->
+            <p>I have complete my Bachelor Of Commerce in B.COM(Computer Application) from Government Degree College, Osmania University, Telangana, India. I possess skills and knowledge that enable me to work on various web technologies such as HTML5, CSS, Bootstrap, JavaScript, Node.js, React.js, SQLite, Python</p>
+            <p>I was born and brought up in a small town called Medak in the state of Telangana. My parents are Farmer who work hard to provide me with all.</p>
             <a href="#" class="btn-box">More About Me</a>
         </div>
     </section>
@@ -189,7 +189,7 @@
             <div class="main-text" id="project">
                 <h2>Latest <span>Project</span></h2>
 
-                <div class="portfolio-content">
+                <div class="portfolio-content col-md-4">
                     <div class="row">
                         <img src="./ocean.jpg">
                         <div class="layer">
