--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="home-container">
             <h3>Hello, It's Me</h3>
             <h1>Chandulal Halavath</h1>
-            <h3>And I'm a <span class="text"></span> with a passion for building user friendly sites.</h3>
+            <h3>And I'm a <span class="text"></span> with a passion for building user friendly WebSites.</h3>
             <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum debitis quaerat laboriosam facere ipsum repellendus iste nostrum sit repellat aspernatur! Facere voluptates dolor consequatur nihil possimus, dignissimos atque blanditiis harum odit eos, animi veniam similique tempore deleniti! Tempore accusamus qui blanditiis atque expedita eligendi, placeat sequi quos temporibus nobis modi? </p> -->
             <div class="home-sci">
                 <a href="#" style="--i:6"><i class='bx bxl-facebook'></i></a>
