--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
             <h1>Chandulal Halavath</h1>
             <h3>And I'm a <span class="text"></span> with a passion for building user friendly WebSites.</h3>
             <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum debitis quaerat laboriosam facere ipsum repellendus iste nostrum sit repellat aspernatur! Facere voluptates dolor consequatur nihil possimus, dignissimos atque blanditiis harum odit eos, animi veniam similique tempore deleniti! Tempore accusamus qui blanditiis atque expedita eligendi, placeat sequi quos temporibus nobis modi? </p> -->
+            <div>
+                <!-- <button class="link-btn"><a href="#">GitHub <i class='bx bxl-github'></i></a></button> -->
+                <button class="link-btn"><a href="https://github.com/halavathchandulal" target="_blank" rel="noopener noreferrer">GitHub <i class='bx bxl-github'></i></a></button>
+                <button class="link-btn"><a href="https://drive.google.com/file/d/1mHDJi_w2rupwImh295ORdWn9nbOTZzYU/view?usp=sharing">Download CV <i class='bx bxs-file'></i></a></button>
+            </div>
             <div class="home-sci">
-                <a href="#" style="--i:6"><i class='bx bxl-facebook'></i></a>
-                <a href="#" style="--i:7"><i class='bx bxl-instagram'></i></a>
-                <a href="#" style="--i:8"><i class='bx bxl-whatsapp'></i></a>
-                <a href="#" style="--i:9"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://wa.me/9553674856" target="_blank" rel="noopener noreferrer"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://www.instagram.com/mrchandu_._/" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.linkedin.com/in/chandulalhalavath" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.facebook.com/halavathchandulal" target="_blank" rel="noopener noreferrer"><i class='bx bxl-facebook'></i></a>
             </div>
             <a href="#" class="btn-box">More About Me</a>
         </div>
@@ -53,7 +58,7 @@
         </div>
     </section>
 
-    <section>
+    <!-- <section>
         <div class="services" id="services">
             <div class="container">
                 <h1 class="sub-title">My <span>Services</span></h1>
@@ -79,7 +84,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <h1 class="sub-title">My <span>Skills</span></h1>
     <section>
         <div class="container1" id="skills">
@@ -141,10 +146,19 @@
                         <span></span>
                     </div>
                 </div>
+                <div class="bar"><i style="color: #c32ec9"  class='bx bxl-python'></i>
+                    <div class="info">
+                        <span>Python</span>
+                    </div>
+                    <div class="progress-line python">
+                        <span></span>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container1">
-            <h1 class="heading1">Professional Skills</h1>
+            <div class="heading2"><h1 class="heading1">Professional Skills</h1></div>
+            
             <div class="radial-bars">
                 <div class="radial-bar">
                     <svg x="0px" viewBox="0 0 200 200">
@@ -238,17 +252,17 @@
     <section class="contact" id="contact">
         <div class="contact-text">
             <h2>Contact <span>Me</span></h2>
-            <h4>Let's work Together</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id fuga voluptate eius impedit, enim illo saepe quaerat nulla incidunt facere tempore ad a, voluptas cupiditate quam soluta, perferendis excepturi eaque corrupti quo placeat reprehenderit! Nulla, modi quia quis dignissimos provident facilis explicabo. Officiis accusantium rem facilis temporibus, et voluptas. In atque, dolore iusto itaque error nobis cumque blanditiis illum enim nesciunt quae sequi quia, eveniet iste adipisci placeat laboriosam, laborum voluptatum. Facere odit voluptatem laboriosam? Excepturi laboriosam distinctio iste, sit facilis optio culpa rem, nisi inventore nam incidunt accusantium dicta saepe quo ex porro, natus officia minima nesciunt architecto velit!</p>
+            <!-- <h4>Let's work Together</h4> -->
+            <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id fuga voluptate eius impedit, enim illo saepe quaerat nulla incidunt facere tempore ad a, voluptas cupiditate quam soluta, perferendis excepturi eaque corrupti quo placeat reprehenderit! Nulla, modi quia quis dignissimos provident facilis explicabo. Officiis accusantium rem facilis temporibus, et voluptas. In atque, dolore iusto itaque error nobis cumque blanditiis illum enim nesciunt quae sequi quia, eveniet iste adipisci placeat laboriosam, laborum voluptatum. Facere odit voluptatem laboriosam? Excepturi laboriosam distinctio iste, sit facilis optio culpa rem, nisi inventore nam incidunt accusantium dicta saepe quo ex porro, natus officia minima nesciunt architecto velit!</p> -->
             <div class="contact-list">
                 <li><i class='bx bxs-send'></i>halavathchandu2000@gmail.com</li>
                 <li><i class='bx bxs-phone'></i>+91 9553674856</li>
             </div>
             <div class="contact-icons">
-                <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-                <a href="#"><i class='bx bxl-whatsapp'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://wa.me/9553674856" target="_blank" rel="noopener noreferrer"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://www.instagram.com/mrchandu_._/" target="_blank" rel="noopener noreferrer"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.linkedin.com/in/chandulalhalavath" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.facebook.com/halavathchandulal" target="_blank" rel="noopener noreferrer"><i class='bx bxl-facebook'></i></a>
             </div>
         </div>
         <div class="contact-form">
