--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="main-text" id="project">
                 <h2>Latest <span>Project</span></h2>
 
-                <div class="portfolio-content col-md-4">
+                <div class="portfolio-content">
                     <div class="row">
                         <img src="./ocean.jpg">
                         <div class="layer">
@@ -245,6 +245,7 @@
                             <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
