--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
                 <!-- <button class="link-btn"><a href="#">GitHub <i class='bx bxl-github'></i></a></button> -->
                 <button class="link-btn"><a href="https://github.com/halavathchandulal" target="_blank" rel="noopener noreferrer">GitHub <i class='bx bxl-github'></i></a></button>
-                <button class="link-btn"><a href="https://drive.google.com/file/d/1mHDJi_w2rupwImh295ORdWn9nbOTZzYU/view?usp=sharing">Download CV <i class='bx bxs-file'></i></a></button>
+                <button class="link-btn" id="link-btn2">Download CV <i class='bx bxs-file'></i></button>
             </div>
             <div class="home-sci">
                 <a href="https://wa.me/9553674856" target="_blank" rel="noopener noreferrer"><i class='bx bxl-whatsapp'></i></a>
@@ -52,7 +52,7 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <!-- <h4>Full stack Developer!</h4> -->
-            <p>I have complete my Bachelor Of Commerce in B.COM(Computer Application) from Government Degree College, Osmania University, Telangana, India. I possess skills and knowledge that enable me to work on various web technologies such as HTML5, CSS, Bootstrap, JavaScript, Node.js, React.js, SQLite, Python</p>
+            <p>I have complete my Bachelor Of Commerce in B.COM(Computer Application) from Government Degree College, Osmania University, Telangana, India. I possess skills and knowledge that enable me to work on various web technologies such as HTML5, CSS, Bootstrap, JavaScript, Node.js, React.js, SQLite, Python.</p>
             <p>I was born and brought up in a small town called Medak in the state of Telangana. My parents are Farmer who work hard to provide me with all.</p>
             <a href="#" class="btn-box">More About Me</a>
         </div>
@@ -279,7 +279,7 @@
         </div>
     </section>
     <div class="last-text">
-        <p>Developed with love by Halavath Chandulal @ 2024</p>
+        <p>Developed with love by Chandulal Halavath @ 2024</p>
     </div>
     <a href="#" class="top"><i class='bx bx-up-arrow-alt'></i></a>
     
